<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>tabuterminal</groupId>
	<artifactId>TabuTerminal</artifactId>
	<version>0.1.1</version>
	<repositories>
		<repository>
			<id>terminalfx-repo</id>
			<url>https://github.com/javaterminal/terminalfx/raw/master/releases</url>
		</repository>
		<repository>
			<id>bintray-jetbrains-pty4j</id>
			<name>bintray</name>
			<url>https://jetbrains.bintray.com/pty4j</url>
		</repository>
	</repositories>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>com.zenjava</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>8.8.0</version>
				<configuration>
					<!-- <bundler>windows.app</bundler> -->
					<bundleArguments>
						<icon>${project.basedir}/main/deploy/package/windows/TabuTerminal.ico</icon>
						<jnlp.outfile>TabuTerminal</jnlp.outfile>
					</bundleArguments>
					<j2seVersion>12</j2seVersion>

					<allPermissions>true</allPermissions>
					<description>Tabbed Terminal For Windows</description>
					<title>TabuTerminal</title>
					<needMenu>true</needMenu>
					<needShortcut>true</needShortcut>
					<vendor>Jonathon Walker</vendor>
					<mainClass>tabuterminal.TabuTerminal</mainClass>
					<nativeReleaseVersion>${project.version}</nativeReleaseVersion>
					<appName>${project.artifactId}</appName>
					<verbose>true</verbose>
					<jvmArgs>
						<jvmArg>-Xmx4096m</jvmArg>
						<jvmArg>--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</jvmArg>
						<jvmArg>--add-exports=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</jvmArg>
						<jvmArg>--add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</jvmArg>
						<jvmArg>--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</jvmArg>
						<jvmArg>--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</jvmArg>
						<jvmArg>--add-exports=javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED</jvmArg>
						<jvmArg>--add-exports=javafx.graphics/com.sun.javafx.geom.transform=ALL-UNNAMED</jvmArg>
						<jvmArg>--add-exports=javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</jvmArg>
						
					</jvmArgs>
					<vendor>Jonathon Walker</vendor>
				</configuration>
				<executions>
					<execution>
						<id>create-jfxjar</id>
						<phase>package</phase>
						<goals>
							<goal>build-jar</goal>
						</goals>
					</execution>
					<execution>
						<id>create-native</id>
						<phase>package</phase>
						<goals>
							<goal>build-native</goal>
						</goals>
						<configuration>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.3</version>
				<configuration>
					<mainClass>tabuterminal.TabuTerminal</mainClass>
					<options>
						<option>--add-opens</option>
						<option>javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.geom.transform=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.sg.prism=ALL-UNNAMED</option>
						
					</options>
					<commandlineArgs>-Xmx4096m</commandlineArgs>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>12</source>
					<target>12</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-maven-plugin</artifactId>
			<version>0.0.3</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx</artifactId>
			<version>13-ea+13</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>13-ea+13</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>13-ea+13</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>13-ea+13</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>13-ea+13</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>13-ea+13</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
			<version>13-ea+13</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>13-ea+13</version>
			<scope>compile</scope>
		</dependency>
		<!-- Add dependency for Java 12 -->
		<dependency>
			<groupId>com.kodedu.terminalfx</groupId>
			<artifactId>terminalfx</artifactId>
			<version>1.1.0</version>
		</dependency>
		<!-- dependency missing for pty4j -->
		<dependency>
			<groupId>org.jetbrains.pty4j</groupId>
			<artifactId>pty4j</artifactId>
			<version>0.9.5</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>2.9.9</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.9.10.1</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.9</version>
		</dependency>
	</dependencies>
</project>